[B]Version 1.9.1.1[/B]
Added: display of episode name and number in recordings list
Fixed: no channels/recordings if DVBLink server is not available during xbmc start-up
Fixed: single and recurring manual recordings
Fixed: interrupted playback of the recording, which is still being recorded
Added: Series recording capabilities
Fixed: transcoded live TV streaming
Added: transcoded live TV with timeshifting capabilities

[B]Version 1.9.1[/B]
Added: support for DVBLink v5 server timeshifting capabilities
Fixed: series number, genre, episode name tags
Fixed: correct displaying of series recordings

[B]Version 1.9.0[/B]
Sync with XBMC PVR API v1.9.0

[B]Version 1.7.0[/B]
Fixed: Recordings on DVBLINK 4.5.3
Fixed: Closing socket file handles
Added: Support for Android
Changed: No longer show errors on failed to receive recordings / timers list. 

[B]Version 1.6.2[/B]
Fixed: Authentication issue on unix / linux based platforms
Added: Refresh Timers and Recordings list every 30 seconds
Changed: Timeshift buffer path now refers to a folder path
Delete timeshift buffer when nolonger needed

[B]Version 1.6.1[/B]
Added: Timeshift support (Http only)
Added: Information about backend diskspace (System->System Info->PVR Service) 
Added: Option for enabling information notifications (Default:disabled)
Updated language files
General code style clean up to be more compliant with XBMC coding style

[B]Version 1.6.0.11[/B]
Removed wrong danish language from addon description

[B]Version 1.6.0.10[/B]
Fixed: Timer related crash when addon could not find program information for EPG based timers

[B]Version 1.6.0.9[/B]
Added: Better notification and logging of status / error information 

[B]Version 1.6.0.8[/B]
Fixed: Not all schedules shown
Fixed: Not able to use username/password (Windows only)

[B]Version 1.6.0.7[/B]
Builds for all major os: windows,linux and osx
Updated to XBMC Frodo Beta 2
Updated to newest libdvblinkremote api
Enabled editing of timers